5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1679_1879.log
== TEST (2019-05-01 19:29:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = int(input(""))
hfalta = int (input(""))
print(hextras, "hextras e", hfalta, "de falta")
-- OUTPUT:
420 hextras e 20 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:29:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = int(input(""))
hfalta = int (input(""))
print(hextras, "extras e", hfalta, "de falta")
-- OUTPUT:
420 extras e 20 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:54:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = int(input(""))
hfalta = int (input(""))
print(hextras, "extras e", hfalta, "de falta")
if (hextras)- 1/4 *(hf
-- ERROR:
File "XXXX", line 6
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:53:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = int(input(""))
hfalta = int (input(""))
print(hextras, "extras e", hfalta, "de falta")
H = (hextras)- 1/4 *(hfalta)
if(H>400):
	g = 500.00
else:
	g = 100.00
print("R$", round(g,2))
-- OUTPUT:
420 extras e 20 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:53:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = int(input(""))
hfalta = int (input(""))
print(hextras, "extras e", hfalta, "de falta")
H = (hextras)- 1/4 *(hfalta)
if(H>400):
	g = 500.00
else:
	g = 100.00
print("R$", round(g,2))
-- EXECUTION TIME:
0.154107
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420 extras e 20 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:

-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300 extras e 44 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:53:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = int(input(""))
hfalta = int (input(""))

print(hextras, "extras e", hfalta, "de falta")
H = (hextras)- 1/4 *(hfalta)
if(H>400):
	g = 500.00
else:
	g = 100.00
print("R$", round(g,2))
-- OUTPUT:
420 extras e 20 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:53:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = float(input(""))
hfalta = float(input(""))

print(hextras, "extras, "e", hfalta, "de falta")
H = (hextras)- 1/4 *(hfalta)
if(H>400):
	g = 500.00
else:
	g = 100.00
print("R$", round(g,2))
-- ERROR:
File "XXXX", line 5
    print(hextras, "extras, "e", hfalta, "de falta")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:54:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = float(input(""))
hfalta = float(input(""))

print(hextras, "extras", "e", hfalta, "de falta")
H = (hextras)- 1/4 *(hfalta)
if(H>400):
	g = 500.00
else:
	g = 100.00
print("R$", round(g,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:54:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
hextras = float(input(""))
hfalta = float(input(""))

print(hextras, "extras", "e", hfalta, "de falta")
H = (hextras)- 1/4 *(hfalta)
if(H>400):
	g = 500.00
else:
	g = 100.00
print("R$", round(g,2))
-- EXECUTION TIME:
0.219647
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
